fees index change

--- a/app/views/fees/show.html.erb
+++ b/app/views/fees/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Student:</strong>
-  <%= @fee.student %>
+  <%= @fee.student.name %>
 </p>
 
 <%= link_to 'Edit', edit_fee_path(@fee) %> |
