--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Duration:</strong>
-  <%= @batch.duration %>
+  <strong>capacity:</strong>
+  <%= @batch.capacity %>
 </p>
 
 <p>
@@ -15,6 +15,10 @@
   <%= @batch.day %>
 </p>
 
+<p>
+  <strong>intrument:</strong>
+  <%= @batch.instrument.name %>
+</p>
 <p>
   <strong>Timing:</strong>
   <%= @batch.timing %>
