--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Duration</th>
+      <th>capacity</th>
       <th>Day</th>
       <th>Timing</th>
       <th colspan="3"></th>
@@ -17,7 +17,7 @@
     <% @batches.each do |batch| %>
       <tr>
         <td><%= batch.name %></td>
-        <td><%= batch.duration %></td>
+        <td><%= batch.capacity %></td>
         <td><%= batch.day %></td>
         <td><%= batch.timing %></td>
         <td><%= link_to 'Show', batch %></td>
