--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>capacity</th>
+      <th>duration</th>
       <th>Day</th>
       <th>Timing</th>
       <th colspan="3"></th>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= batch.name %></td>
         <td><%= batch.capacity %></td>
+        <td><%= batch.duration %></td>
         <td><%= batch.day %></td>
         <td><%= batch.timing %></td>
         <td><%= link_to 'Show', batch %></td>
