--- a/app/views/fees/show.html.erb
+++ b/app/views/fees/show.html.erb
@@ -10,5 +10,9 @@
   <%= @fee.student.name %>
 </p>
 
+  <strong>Month:</strong>
+  <%= @fee.month.name %>
+</p>
+
 <%= link_to 'Edit', edit_fee_path(@fee) %> |
 <%= link_to 'Back', fees_path %>
