expense added to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li><%= link_to 'Center', centers_path %></li>
-        <li><%= link_to 'expenses', students_path %></li>
+        <li><%= link_to 'expenses', expenses_path %></li>
         <li><%= link_to 'Students', students_path %></li>
         <li><%= link_to "Batches", batches_path %></li>
         <li><%= link_to "fees", fees_path %></li>
