--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -15,7 +15,7 @@
     <% @fees.each do |fee| %>
       <tr>
         <td><%= fee.amount %></td>
-        <td><%= fee.student.name %></td>
+        <td><%= fee.student.first_name %></td>
         <td><%= link_to 'Show', fee %></td>
         <td><%= link_to 'Edit', edit_fee_path(fee) %></td>
         <td><%= link_to 'Destroy', fee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
