--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,18 @@
       <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li><%= link_to 'Center', centers_path %></li>
-        <li><%= link_to 'expenses', expenses_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Transactions <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Income", fees_path %></li>
+            <li><%= link_to 'Expense', expenses_path %></li>
+          </ul>
+        </li>
         <li><%= link_to 'Students', students_path %></li>
         <li><%= link_to "Batches", batches_path %></li>
-        <li><%= link_to "fees", fees_path %></li>
         <li><%= link_to "instru", instruments_path %></li>
-
         <li><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></li>
       <% else %>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
