--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,7 +2,18 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @student.name %>
+  <%= @student.first_name + ' ' + @student.middle_name + ' ' + @student.last_name %>
+</p>
+
+
+<p>
+  <strong>Date of Joining :</strong>
+  <%= @student.date_of_joining.strftime("%d-%m-%Y") %>
+</p>
+
+<p>
+  <strong>Date of Joining :</strong>
+  <%= @student.date_of_joining.strftime("%d-%m-%Y") %>
 </p>
 
 <p>
