--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,11 +4,15 @@
   <strong>Name:</strong>
   <%= @student.first_name + ' ' + @student.middle_name + ' ' + @student.last_name %>
 </p>
+<p>
+  <strong>Parent/ Gardian Name:</strong>
+  <%= @student.parent_name  %>
+</p>
 
 
 <p>
-  <strong>Date of Joining :</strong>
-  <%= @student.date_of_joining.strftime("%d-%m-%Y") %>
+  <strong>Date of birth :</strong>
+  <%= @student.date_of_birth.strftime("%d-%m-%Y") %>
 </p>
 
 <p>
