attendence feature added

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -34,6 +34,7 @@
 
 
 <h3>Students in this batch</h3>
+<%= link_to "generate_attendence", generate_attendence_path(batch_id: @batch.id)%>
 
 <table data-toggle="table">
   <thead>
