attendence index page added and student show page has its attendences

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
             <li><%= link_to 'Expense', expenses_path %></li>
           </ul>
         </li>
+        <li><%= link_to 'Attendence', attendences_path %></li>
         <li><%= link_to 'Students', students_path %></li>
         <li><%= link_to "Batches", batches_path %></li>
         <li><%= link_to "instru", instruments_path %></li>
